# dagster-expectations

./: .gitignore  .pre-commit-config.yaml  README.md  dagster-solid-pipeline.py  dagster.yaml  pyproject.toml  requirements.txt  workspace.yaml
.telemetry/: id.yaml
dag_solid_pipeline/: clustering.py  clustering_vaex.py  tf_LSTM.py  time_series_LSTM_manning.py
dagster_config/: run_config.yaml
dagster_io/: models.py  postgres.py
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/manning/: warning.json
io_utils/: load_data.py
io_utils/orm/: cookie.py
schedules/: schedules.db
storage/90b0e045-d91f-45e0-b34f-f819c2aa953f/compute_logs/: plot_clusters.err  read_iris_csv.err  run_kmean.err
tests/: test_clustering.py
utils/: dagster_types.py  repo_path.py
