[tool.poetry]
name = "dagster-expectations"
version = "0.1.0"
description = ""
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.11.8"
dagit = "^0.11.8"
pandas = "^1.2.4"
dask = "^2021.4.1"
great-expectations = "^0.13.19"
SQLAlchemy = "^1.4.14"
boto3 = "^1.17.70"
sklearn = "^0.0"
tf-nightly = "^2.6.0-alpha.20210510"
catboost = "^0.25.1"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b1"
pylint = "^2.8.2"
pre-commit = "^2.12.1"
GitPython = "^3.1.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
